Update from develop

--- a/modules/97.html
+++ b/modules/97.html
@@ -43,8 +43,8 @@
   <li><a href="../modules/02_Serialize.html">02_Serialize</a></li>
   <li><a href="../modules/03.html">03</a></li>
   <li><a href="../modules/09_SimNSkinPreview.html">09_SimNSkinPreview</a></li>
-  <li><strong>10</strong></li>
-  <li><a href="../modules/97.html">97</a></li>
+  <li><a href="../modules/10.html">10</a></li>
+  <li><strong>97</strong></li>
 </ul>
 <h2>Classes</h2>
 <ul class="nowrap">
@@ -68,9 +68,11 @@
 
 <div id="content">
 
-<h1>Module <code>10</code></h1>
-<p>Table sum designed for ms tables (optional starting position, default to 0, and absolute value flag)</p>
-<p> wifesundries</p>
+<h1>Module <code>97</code></h1>
+<p>the point of this is to have a square hover area for a text button
+ it is possible to just hover the text but that introduces some odd issues
+ and come on, really, it is harder to click text than it is a square button</p>
+<p> uielements</p>
 
 
 
